[SMT]: Add Authentication mechanism
